--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+SS/1.png
+SS/2.png
+SS/3.png
+SS/4.png
+SS/Poster (Custom).png
+SS/Poster.png
+SS/Thumbnail.png
+TankBaseRecord.mp4
+user.keystore
